kubernetes/apps/media/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  hostnames: ["nextcloud.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      port: 443
  rules:
    - backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: RegularExpression
            value: /.well-known/(?:card|cal)dav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
            statusCode: 301
    # fix security and setup warnings failing to load in the web ui
    - backendRefs:
        - name: nextcloud
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /settings/ajax/checksetup
      timeouts:
        request: 300s
